--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -10,91 +10,159 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: ( [[ $SKIP_UNIT_TESTS == true ]] || echo false )
+    skip: $SKIP_AMAZON_LINUX_2
+
+  - label: ":centos: CentOS 7.6 - Build"
+    command:
+      - "bash ./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env: 
+      IMAGE_TAG: "centos-7.6"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+
+  - label: ":ubuntu: Ubuntu 16.04 - Build"
+    command:
+      - "bash ./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env: 
+      IMAGE_TAG: "ubuntu-16.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_16
+
+  - label: ":ubuntu: Ubuntu 18.04 - Build"
+    command:
+      - "bash ./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env:
+      IMAGE_TAG: "ubuntu-18.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
+
+  - label: ":darwin: macOS 10.14 - Build"
+    command:
+      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
+      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+      - "cd eos && ./.cicd/build.sh"
+      - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    plugins:
+      - chef/anka#v0.5.1:
+          no-volume: true
+          inherit-environment-vars: true
+          vm-name: 10.14.4_6C_14G_40G
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          modify-cpu: 12
+          modify-ram: 24
+          always-pull: true
+          debug: true
+          wait-network: true
+    agents:
+      - "queue=mac-anka-large-node-fleet"
+
+  - wait
+
+  - label: ":aws: Amazon_Linux 2.0 - Unit Test"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2.0 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/parallel-tests.sh"
+    env:
+      IMAGE_TAG: "amazonlinux-2"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_AMAZON_LINUX_2
+
+  - label: ":centos: CentOS 7.6 - Test"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/parallel-tests.sh"
+    env: 
+      IMAGE_TAG: "centos-7.6"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_CENTOS_7
+
+  - label: ":ubuntu: Ubuntu 16.04 - Unit Test"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/parallel-tests.sh"
+    env: 
+      IMAGE_TAG: "ubuntu-16.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_16
+
+  - label: ":ubuntu: Ubuntu 18.04 - Unit Test"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/parallel-tests.sh"
+    env:
+      IMAGE_TAG: "ubuntu-18.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
+
+  - label: ":darwin: macOS 10.14 - Unit Test"
+    command:
+      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
+      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
+      - "cd eos && bash ./.cicd/parallel-tests.sh"
+    plugins:
+      - chef/anka#v0.5.1:
+          no-volume: true
+          inherit-environment-vars: true
+          vm-name: 10.14.4_6C_14G_40G
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          modify-cpu: 12
+          modify-ram: 24
+          always-pull: true
+          debug: true
+          wait-network: true
+    agents:
+      - "queue=mac-anka-large-node-fleet"
 
 
-  # - label: ":centos: CentOS 7.6 - Build"
-  #   command:
-  #     - "bash ./.cicd/build.sh"
-  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-  #   env: 
-  #     IMAGE_TAG: "centos-7.6"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-
-  # - label: ":ubuntu: Ubuntu 16.04 - Build"
-  #   command:
-  #     - "bash ./.cicd/build.sh"
-  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-  #   env: 
-  #     IMAGE_TAG: "ubuntu-16.04"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_UBUNTU_16
-
-  # - label: ":ubuntu: Ubuntu 18.04 - Build"
-  #   command:
-  #     - "bash ./.cicd/build.sh"
-  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-  #   env:
-  #     IMAGE_TAG: "ubuntu-18.04"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_UBUNTU_18
-
-  # - label: ":darwin: macOS 10.14 - Build"
-  #   command:
-  #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
-  #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-  #     - "cd eos && ./.cicd/build.sh"
-  #     - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-  #   plugins:
-  #     - chef/anka#v0.5.1:
-  #         no-volume: true
-  #         inherit-environment-vars: true
-  #         vm-name: 10.14.4_6C_14G_40G
-  #         vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
-  #         modify-cpu: 12
-  #         modify-ram: 24
-  #         always-pull: true
-  #         debug: true
-  #         wait-network: true
-  #   agents:
-  #     - "queue=mac-anka-large-node-fleet"
-
-  # - wait
-
-  # - label: ":aws: Amazon_Linux 2.0 - Unit Test"
+  # - label: ":aws: Amazon_Linux 2.0 - Long-Running Tests"
   #   command:
   #     - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2.0 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/parallel-tests.sh"
+  #     - "bash ./.cicd/long-running-tests.sh"
   #   env:
   #     IMAGE_TAG: "amazonlinux-2"
   #     BUILDKITE_AGENT_ACCESS_TOKEN:
   #   agents:
   #     queue: "automation-eos-builder-fleet"
   #   timeout: ${TIMEOUT:-10}
-  #   skip: "[[ ${SKIP_AMAZON_LINUX_2:-false} == true ]] || [[ ${SKIP_UNIT_TESTS:-false} == true ]]"
+  #   skip: $SKIP_AMAZON_LINUX_2
 
-  # - label: ":centos: CentOS 7.6 - Test"
+  # - label: ":centos: CentOS 7.6 - Long-Running Tests"
   #   command:
   #     - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/parallel-tests.sh"
+  #     - "bash ./.cicd/long-running-tests.sh"
   #   env: 
   #     IMAGE_TAG: "centos-7.6"
   #     BUILDKITE_AGENT_ACCESS_TOKEN:
   #   agents:
   #     queue: "automation-eos-builder-fleet"
   #   timeout: ${TIMEOUT:-10}
-  #   skip: "[[ ${SKIP_CENTOS_7:-false} == true ]] || [[ ${SKIP_UNIT_TESTS:-false} == true ]]"
+  #   skip: $SKIP_CENTOS_7
 
-  # - label: ":ubuntu: Ubuntu 16.04 - Unit Test"
+  # - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
   #   command:
   #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
   #     - "bash ./.cicd/parallel-tests.sh"
@@ -104,9 +172,9 @@ steps:
   #   agents:
   #     queue: "automation-eos-builder-fleet"
   #   timeout: ${TIMEOUT:-10}
-  #   skip: "[[ ${SKIP_UBUNTU_16:-false} == true ]] || [[ ${SKIP_UNIT_TESTS:-false} == true ]]"
+  #   skip: $SKIP_UBUNTU_16
 
-  # - label: ":ubuntu: Ubuntu 18.04 - Unit Test"
+  # - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
   #   command:
   #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
   #     - "bash ./.cicd/parallel-tests.sh"
@@ -116,9 +184,9 @@ steps:
   #   agents:
   #     queue: "automation-eos-builder-fleet"
   #   timeout: ${TIMEOUT:-10}
-  #   skip: "[[ $SKIP_UBUNTU_18 == true ]] || [[ $SKIP_UNIT_TESTS == true ]]"
+  #   skip: $SKIP_UBUNTU_18
 
-  # - label: ":darwin: macOS 10.14 - Unit Test"
+  # - label: ":darwin: macOS 10.14 - Long-Running Tests"
   #   command:
   #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
   #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
@@ -137,157 +205,86 @@ steps:
   #         wait-network: true
   #   agents:
   #     - "queue=mac-anka-large-node-fleet"
-  #   skip: "([[ ${SKIP_MOJAVE:-false} == true ]] || [[ ${SKIP_UNIT_TESTS:-false} == true ]])"
 
+  - wait:
+    continue_on_failure: true
 
-  # - label: ":aws: Amazon_Linux 2.0 - Long-Running Tests"
-  #   command:
-  #     - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2.0 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/long-running-tests.sh"
-  #   env:
-  #     IMAGE_TAG: "amazonlinux-2"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: "[[ $SKIP_AMAZON_LINUX_2 == true ]] || [[ ${SKIP_LONG_RUNNING_TESTS:-true} == true ]]"
+  - command: |
+      echo '+++ :compression: Extracting Test Metrics Code'
+      tar -zxf .cicd/metrics/test-metrics.tar.gz
+      echo '+++ :javascript: Running test-metrics.js'
+      node --max-old-space-size=32768 test-metrics.js
+    label: ":bar_chart: Test Metrics"
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: 10
+    soft_fail: true
 
-  # - label: ":centos: CentOS 7.6 - Long-Running Tests"
-  #   command:
-  #     - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/long-running-tests.sh"
-  #   env: 
-  #     IMAGE_TAG: "centos-7.6"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: "[[ $SKIP_CENTOS_7 == true ]] || [[ ${SKIP_LONG_RUNNING_TESTS:-true} == true ]]"
-
-  # - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
-  #   command:
-  #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/long-running-tests.sh"
-  #   env: 
-  #     IMAGE_TAG: "ubuntu-16.04"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: "[[ $SKIP_UBUNTU_16 == true ]] || [[ ${SKIP_LONG_RUNNING_TESTS:-true} == true ]]"
-
-  # - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
-  #   command:
-  #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-  #     - "bash ./.cicd/long-running-tests.sh"
-  #   env:
-  #     IMAGE_TAG: "ubuntu-18.04"
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: "[[ $SKIP_UBUNTU_18 == true ]] || [[ ${SKIP_LONG_RUNNING_TESTS:-true} == true ]]"
-
-  # - label: ":darwin: macOS 10.14 - Long-Running Tests"
-  #   command:
-  #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
-  #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-  #     - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-  #     - "cd eos && bash ./.cicd/long-running-tests.sh"
-  #   plugins:
-  #     - chef/anka#v0.5.1:
-  #         no-volume: true
-  #         inherit-environment-vars: true
-  #         vm-name: 10.14.4_6C_14G_40G
-  #         vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
-  #         modify-cpu: 12
-  #         modify-ram: 24
-  #         always-pull: true
-  #         debug: true
-  #         wait-network: true
-  #   agents:
-  #     - "queue=mac-anka-large-node-fleet"
-  #   skip: "[[ $SKIP_MOJAVE == true ]] || [[ ${SKIP_LONG_RUNNING_TESTS:-true} == true ]]"
-
-  # - wait:
-  #   continue_on_failure: true
-
-  # - command: |
-  #     echo '+++ :compression: Extracting Test Metrics Code'
-  #     tar -zxf .cicd/metrics/test-metrics.tar.gz
-  #     echo '+++ :javascript: Running test-metrics.js'
-  #     node --max-old-space-size=32768 test-metrics.js
-  #   label: ":bar_chart: Test Metrics"
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: 10
-  #   soft_fail: true
-
-  # - wait
+  - wait
   
-  # - trigger: "eosio-dot-contracts-base-images-beta"
-  #   label: ":docker: Ensure EOSIO Installation Base Image"
-  #   build:
-  #     commit: "${BUILDKITE_COMMIT}"
-  #     branch: "${BUILDKITE_BRANCH}"
-  #   async: true
+  - trigger: "eosio-dot-contracts-base-images-beta"
+    label: ":docker: Ensure EOSIO Installation Base Image"
+    build:
+      commit: "${BUILDKITE_COMMIT}"
+      branch: "${BUILDKITE_BRANCH}"
+    async: true
 
-  # - wait
+  - wait
 
-  # - label: ":centos: Centos 7.6 - Package Builder"
-  #   command:
-  #     - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-  #     - "./.cicd/package-builder.sh"
-  #   env:
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_CENTOS_7
+  - label: ":centos: Centos 7.6 - Package Builder"
+    command:
+      - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
+      - "./.cicd/package-builder.sh"
+    env:
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_CENTOS_7
 
-  # - label: ":ubuntu: Ubuntu 16.04 - Package Builder"
-  #   command:
-  #     - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-  #     - "./.cicd/package-builder.sh"
-  #   env:
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_UBUNTU_16
+  - label: ":ubuntu: Ubuntu 16.04 - Package Builder"
+    command:
+      - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
+      - "./.cicd/package-builder.sh"
+    env:
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_16
 
-  # - label: ":ubuntu: Ubuntu 18.04 - Package Builder"
-  #   command:
-  #     - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
-  #     - "./.cicd/package-builder.sh"
-  #   env:
-  #     BUILDKITE_AGENT_ACCESS_TOKEN:
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: ${TIMEOUT:-10}
-  #   skip: $SKIP_UBUNTU_18
+  - label: ":ubuntu: Ubuntu 18.04 - Package Builder"
+    command:
+      - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
+      - "./.cicd/package-builder.sh"
+    env:
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
 
-  # - label: ":darwin: Mojave - Package Builder"
-  #   command:
-  #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT"
-  #     - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build & Test' && tar -xzf build.tar.gz"
-  #     - "cd eos && ./.cicd/package-builder.sh"
-  #   plugins:
-  #     - chef/anka#v0.5.1:
-  #         no-volume: true
-  #         inherit-environment-vars: true
-  #         vm-name: 10.14.4_6C_14G_40G
-  #         vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
-  #         always-pull: true
-  #         debug: true
-  #         wait-network: true
-  #   agents:
-  #     - "queue=mac-anka-node-fleet"
-  #   timeout: 10
+  - label: ":darwin: Mojave - Package Builder"
+    command:
+      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT"
+      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build & Test' && tar -xzf build.tar.gz"
+      - "cd eos && ./.cicd/package-builder.sh"
+    plugins:
+      - chef/anka#v0.5.1:
+          no-volume: true
+          inherit-environment-vars: true
+          vm-name: 10.14.4_6C_14G_40G
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          always-pull: true
+          debug: true
+          wait-network: true
+    agents:
+      - "queue=mac-anka-node-fleet"
+    timeout: 10
 
-  # - label: ":git: Git Submodule Regression Check"
-  #   command:
-  #     - "./.cicd/submodule-regression-checker.sh"
-  #   agents:
-  #     queue: "automation-basic-builder-fleet"
-  #   timeout: 5
+  - label: ":git: Git Submodule Regression Check"
+    command:
+      - "./.cicd/submodule-regression-checker.sh"
+    agents:
+      queue: "automation-basic-builder-fleet"
+    timeout: 5
