--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -233,7 +233,7 @@ steps:
 
   - label: ":centos: Centos 7.6 - Package Builder"
     command:
-      - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
+      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
     env:
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -244,7 +244,7 @@ steps:
 
   - label: ":ubuntu: Ubuntu 16.04 - Package Builder"
     command:
-      - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
     env:
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -255,7 +255,7 @@ steps:
 
   - label: ":ubuntu: Ubuntu 18.04 - Package Builder"
     command:
-      - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
     env:
       BUILDKITE_AGENT_ACCESS_TOKEN:
